--- a/src/main/resources/default-payloads.yaml
+++ b/src/main/resources/default-payloads.yaml
@@ -1,14 +1,13 @@
 shortcut_search_and_replace: Ctrl+L
 shortcut_payload_menu: Ctrl+Q
 shortcut_collaborator: Ctrl+M
-shortcut_ia_chat: Ctrl+J
+shortcut_add_custom_keyword: Ctrl+Alt+J
 
 categories:
   - name: "XSS"
     payloads:
       - name: "Fingerprint"
         value: "\"><h1>"
-        shortcut: Ctrl+k
       - name: "Simple"
         value: "<script>alert(1)</script>"
       - name: "Classical"
@@ -379,7 +378,7 @@ categories:
           <?xml version="1.0" encoding="UTF-8" standalone="no"?><root>
           <id>1</id>
           </root>
-  
+
   - name: Hackvertor
     payloads:
       - name: Hackvertor Authorization - admin
@@ -2923,7 +2922,7 @@ keywords:
       - "viewstate"
       - "zenid"
       - "PHPSESSID"
-  - name : "Usernames"
+  - name: "Usernames"
     values:
       - "root"
       - "admin"
@@ -2953,106 +2952,106 @@ keywords:
       - "Passw0rd!"
       - "cisco"
       - "root"
-      - "debug"   
+      - "debug"
   - name: "Subdomains"
-    values: 
-    - "www"
-    - "mail"
-    - "ftp"
-    - "localhost"
-    - "webmail"
-    - "smtp"
-    - "pop"
-    - "ns1"
-    - "webdisk"
-    - "ns2"
-    - "cpanel"
-    - "whm"
-    - "autodiscover"
-    - "autoconfig"
-    - "m"
-    - "imap"
-    - "test"
-    - "ns"
-    - "blog"
-    - "pop3"
-    - "dev"
-    - "www2"
-    - "admin"
-    - "forum"
-    - "news"
-    - "vpn"
-    - "ns3"
-    - "mail2"
-    - "new"
-    - "mysql"
-    - "old"
-    - "lists"
-    - "support"
-    - "mobile"
-    - "mx"
-    - "static"
-    - "docs"
-    - "beta"
-    - "shop"
-    - "sql"
-    - "secure"
-    - "demo"
-    - "cp"
-    - "calendar"
-    - "wiki"
-    - "web"
-    - "media"
-    - "email"
-    - "images"
-    - "img"
-    - "www1"
-    - "intranet"
-    - "portal"
-    - "video"
-    - "sip"
-    - "dns2"
-    - "api"
-    - "cdn"
-    - "stats"
-    - "dns1"
-    - "ns4"
-    - "www3"
-    - "dns"
-    - "search"
-    - "staging"
-    - "server"
-    - "mx1"
-    - "chat"
-    - "wap"
-    - "my"
-    - "svn"
-    - "mail1"
-    - "sites"
-    - "proxy"
-    - "ads"
-    - "host"
-    - "crm"
-    - "cms"
-    - "backup"
-    - "mx2"
-    - "lyncdiscover"
-    - "info"
-    - "apps"
-    - "download"
-    - "remote"
-    - "db"
-    - "forums"
-    - "store"
-    - "relay"
-    - "files"
-    - "newsletter"
-    - "app"
-    - "live"
-    - "owa"
-    - "en"
-    - "start"
-    - "sms"
-    - "office"
-    - "exchange"
-    - "ipv4"
+    values:
+      - "www"
+      - "mail"
+      - "ftp"
+      - "localhost"
+      - "webmail"
+      - "smtp"
+      - "pop"
+      - "ns1"
+      - "webdisk"
+      - "ns2"
+      - "cpanel"
+      - "whm"
+      - "autodiscover"
+      - "autoconfig"
+      - "m"
+      - "imap"
+      - "test"
+      - "ns"
+      - "blog"
+      - "pop3"
+      - "dev"
+      - "www2"
+      - "admin"
+      - "forum"
+      - "news"
+      - "vpn"
+      - "ns3"
+      - "mail2"
+      - "new"
+      - "mysql"
+      - "old"
+      - "lists"
+      - "support"
+      - "mobile"
+      - "mx"
+      - "static"
+      - "docs"
+      - "beta"
+      - "shop"
+      - "sql"
+      - "secure"
+      - "demo"
+      - "cp"
+      - "calendar"
+      - "wiki"
+      - "web"
+      - "media"
+      - "email"
+      - "images"
+      - "img"
+      - "www1"
+      - "intranet"
+      - "portal"
+      - "video"
+      - "sip"
+      - "dns2"
+      - "api"
+      - "cdn"
+      - "stats"
+      - "dns1"
+      - "ns4"
+      - "www3"
+      - "dns"
+      - "search"
+      - "staging"
+      - "server"
+      - "mx1"
+      - "chat"
+      - "wap"
+      - "my"
+      - "svn"
+      - "mail1"
+      - "sites"
+      - "proxy"
+      - "ads"
+      - "host"
+      - "crm"
+      - "cms"
+      - "backup"
+      - "mx2"
+      - "lyncdiscover"
+      - "info"
+      - "apps"
+      - "download"
+      - "remote"
+      - "db"
+      - "forums"
+      - "store"
+      - "relay"
+      - "files"
+      - "newsletter"
+      - "app"
+      - "live"
+      - "owa"
+      - "en"
+      - "start"
+      - "sms"
+      - "office"
+      - "exchange"
+      - "ipv4"
